Correct online paging, batch output geometry and observability wiring
Online tier. The user list positions its browse the way COBOL's STARTBR
does and guards every field width; the card list reads through
index-backed keyset finders instead of offset paging while keeping the
lookahead, end-of-file and backward-browse behaviour the source has; the
account view composes the cross-reference, account and customer records
in a single traversal; and the account update seals the field snapshot
that the two-layer concurrency check compares, editing every displayed
value character-exactly. Field widths on nine DTOs and entities are now
expressed in the unit the copybook or symbolic map declares, so no field
silently narrows or widens.

Batch tier. The combined-transaction reader pins the archived generation
it reads rather than resolving it twice; the combine job publishes its
shared context key and detects an abend instead of completing; the report
job no longer refuses an inverted date window, which the source never
does, and reports genuine parameter problems as
JobParametersInvalidException; posting counters are compensated when a
chunk rolls back; the pipeline orchestrator gates each stage and reports
both numbers when a gate refuses; and the reject, transaction and
statement writers page their staged parts and consolidate them into one
generation object per run at the record widths the datasets declare -
430 bytes for a reject, 133 for a report line, 80 and 100 for the two
statement outputs.

Queue bridge. Report submission publishes to the FIFO queue under a
deterministic message group, backed by a dead-letter queue and a redrive
policy, and a poison message is bounded by delivery attempts rather than
redelivered forever.

Observability. One span-naming convention gives every batch job a
readable trace name and defers to the framework when no job instance is
present; a bounded database contributor answers the composite health
endpoint within a fixed budget behind live